--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<h1>Ola mundo!</h1>
+<app-menu></app-menu>
+
+<app-rodape></app-rodape>
+
+<app-entrar></app-entrar>
+
+<app-cadastrar></app-cadastrar>
