--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -14,7 +14,7 @@
                 href="https://facebook.com/generationbrasil"
                 target="_blank"
                 class="icoFacebook"
-                ><i class="fa fa-facebook-square" aria-hidden="true"></i>
+                ><i class="fa -facebook-square" aria-hidden="true"></i>
               </a>
             </li>
   
@@ -23,7 +23,7 @@
                 href="https://instagram.com/generationbrasil"
                 target="_blank"
                 class="icoInstagram"
-                ><i class="fa fa-instagram" aria-hidden="true"></i>
+                ><i class="fa -instagram" aria-hidden="true"></i>
               </a>
             </li>
   
@@ -32,7 +32,7 @@
                 href="https://linkedin.com/school/generationbrasil"
                 target="_blank"
                 class="icoLinkedin"
-                ><i class="fa fa-linkedin-square" aria-hidden="true"></i>
+                ><i class="fa -linkedin-square" aria-hidden="true"></i>
               </a>
             </li>
           </ul>
