--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -9,7 +9,7 @@
   
             <div class="form-group">
               <label for="nome">Nome</label>
-              <input  [(ngModel)] = 'Usuario.nome' 
+              <input  [(ngModel)] = 'usuario.nome' 
                 class="form-control"
                 name="nome"
                 id="nome"
@@ -19,8 +19,8 @@
             </div>
   
             <div class="form-group">
-              <label for="usuario">Usuario</label>
-              <input [(ngModel)] = 'Usuario.usuario'
+              <label for="usuario">Email</label>
+              <input [(ngModel)] = 'usuario.email'
                 class="form-control"
                 name="usuario"
                 id="usuario"
@@ -31,7 +31,7 @@
   
             <div class="form-group">
               <label for="foto">Link da Foto</label>
-              <input [(ngModel)] = 'Usuario.foto'
+              <input [(ngModel)] = 'usuario.foto'
                 class="form-control"
                 name="foto"
                 id="foto"
@@ -53,7 +53,7 @@
   
             <div class="form-group">
               <label for="confirmaSenha">Confirmar Senha</label>
-              <input [(ngModel)] = 'Usuario.senha'
+              <input [(ngModel)] = 'usuario.senha'
                 class="form-control"
                 name="confirmaSenha"
                 id="confirmaSenha"
@@ -67,7 +67,7 @@
               <select name="tipo" id="tipo" class="form-control" (change)='tipoUser($event)'>
                 <option value="">Selecione um tipo de usuário:</option>
                 <option value="normal">Normal</option>
-                <option value="admin">Administrador</option>
+                <option value="adm">Administrador</option>
               </select>
             </div>
   
