--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -6,17 +6,17 @@
             <h1 class="text-center mb-3">Entrar</h1>
   
             <div class="form-group">
-              <label for="usuario">Usuario</label>
-              <input class="form-control" name="usuario" id="usuario" placeholder="Seu usuario" type="text">
+              <label for="usuario">Email</label>
+              <input [(ngModel)]='usuarioLogin.email' class="form-control" name="usuario" id="usuario" placeholder="Seu usuario" type="text">
             </div>
   
             <div class="form-group">
               <label for="senha">Senha</label>
-              <input class="form-control" name="senha" id="senha" placeholder="Seu Senha" type="password">
+              <input [(ngModel)]='usuarioLogin.senha' class="form-control" name="senha" id="senha" placeholder="Seu Senha" type="password">
             </div>
   
             <div class="d-flex justify-content-center">
-              <button class="btn btn-success" type="submit">Entrar</button>
+              <button class="btn btn-success" type="submit" (click)='entrar()'>Entrar</button>
             </div>
   
             <hr class="mt-5 mb-5">
