--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -12,7 +12,7 @@
   
             <div class="form-group">
               <label for="senha">Senha</label>
-              <input [(ngModel)]='usuarioLogin.senha' class="form-control" name="senha" id="senha" placeholder="Seu Senha" type="password">
+              <input [(ngModel)]='usuarioLogin.senha' class="form-control" name="senha" id="senha" placeholder="Sua Senha" type="password">
             </div>
   
             <div class="d-flex justify-content-center">
