--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -15,15 +15,15 @@
     <ul class="navbar-nav mr-auto d-flex align-items-center">
       <li class="nav-item active">
         <img
-          src="https://services.meteored.com/img/article/la-mitad-del-planeta-tierra-se-esta-enfriando-mas-rapido-pangea-placas-tectonicas-342591-1.jpg"
-          alt=""
+          src={{foto}}
+          alt="Imagem do user"
           width="50px"
           height="50px"
           class="img-fluid rounded-circle"
         />
       </li>
       <li class="nav-item pl-3">
-        <p class="m-0 font-weight-bold text-white fs-16">Nome do Usuário</p>
+        <p class="m-0 font-weight-bold text-white fs-16">Olá, {{nome}}</p>
       </li>
 
       <li class="nav-item pl-3">
@@ -35,7 +35,7 @@
     </ul>
     <ul class="navbar-nav ml-auto d-flex align-items-center">
       <li class="nav-item pl-3">
-        <a class="m-0 font-weight-bold text-white fs-16"
+        <a (click)='sair()' class="m-0 font-weight-bold text-white fs-16"
           >Sair <i class="fa fa-sign-out" aria-hidden="true"></i>
         </a>
       </li>
